# uni

./: README.md
Cyfrowe przetwarzanie sygnałów/generator/: signalGenerator.py
Cyfrowe przetwarzanie sygnałów/próbkowanie , kwanryzacja, rekonstrukcja/: graphs.py  main.py  signalGenerator.py  signalSampling.py  stat.py  util.py
Metaheurystyki i ich zastosowania/algorytm PSO/: PSO.py
Metaheurystyki i ich zastosowania/algorytm genetyczny/: defs.py  main.py
Metaheurystyki i ich zastosowania/alogrytm mrówkowy/: ant.py
Metaheurystyki i ich zastosowania/grafy/: functions.py  main.py
Metody numeryczne i optymalizacja/Zadanie 2/: uklady_func.py  uklady_main.py
Metody numeryczne i optymalizacja/Zadanie 3/: lagrange.py  main.py
Metody numeryczne i optymalizacja/Zadanie 4/: main.py  num4.py
Metody numeryczne i optymalizacja/Zadanie 5/: approx_func.py  approx_main.py
Podstawy analizy cyklu życia/project/: CMakeLists.txt
Podstawy analizy cyklu życia/project/program/: CMakeLists.txt
Podstawy analizy cyklu życia/project/program/src/: main.cpp
Systemy wbudowane/2138/: .depend  adc.lst  eeprom.lst  eepromTest.lst  i2c.lst  lcd.lst  lcd_hw.lst  lpc2138_edu_board.elf  lpc2138_edu_board.hex  lpc2138_edu_board.map  main.c  main.lst  makefile  pca9532.lst
Sztuczna inteligencja i systemy ekpertowe/Piętnastka/: 15.py
Techniki sztucznej inteligencji/PSO vs DE/: DE.py  PSO.py  evaluation_functions.py  test_functions.py
Techniki sztucznej inteligencji/motyl vs nietoperz/: bat.py  butterfly.py  test_functions.py
(+16 files in other folders)
